--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   animated_background: ^2.0.0
   clay_containers: ^0.3.4
   cloud_firestore: ^5.3.0
+  random_string: ^2.3.1
 
 dev_dependencies:
   flutter_test:
